improvements to highlight.js

--- a/_posts/2012-05-14-hue-intro.md
+++ b/_posts/2012-05-14-hue-intro.md
@@ -20,10 +20,12 @@ So far I've spent evenings and weekends during the last five weeks hacking on th
 
 A simple and completely useless program that contains a function which multiplies two integers with 9 and each other, then divides that with 4 and returns the result:
 
-    foo = ^(x, y Int) Int: z = x * y * 9
-                           z / 4
-    a = 19
-    b = foo 4 (5*10*a)  # => 8550
+```ts
+foo = ^(x, y Int) Int: z = x * y * 9
+                       z / 4
+a = 19
+b = foo 4 (5*10*a)  # => 8550
+```
 
 Note a few things:
 
@@ -37,21 +39,25 @@ Note a few things:
 
 Let's compile this program:
 
-    hue hello.hue hello.ll
+```txt
+hue hello.hue hello.ll
+```
 
 And look at the [LLVM](http://llvm.org/) IR code that the Hue compiler generates:
 
-    define i64 @main() nounwind {                               # 1
-      %foo_res = call i64 @"hello$foo"(i64 4, i64 950)          # 2
-      ret i64 0                                                 # 3
-    }
+```llvm
+define i64 @main() nounwind {                               # 1
+  %foo_res = call i64 @"hello$foo"(i64 4, i64 950)          # 2
+  ret i64 0                                                 # 3
+}
 
-    define private i64 @"hello$foo"(i64 %x, i64 %y) nounwind {  # 4
-      %multmp = mul i64 %x, %y                                  # 5
-      %multmp1 = mul i64 %multmp, 9                             # 6
-      %divtmp = sdiv i64 %multmp1, 4                            # 7
-      ret i64 %divtmp                                           # 8
-    }
+define private i64 @"hello$foo"(i64 %x, i64 %y) nounwind {  # 4
+  %multmp = mul i64 %x, %y                                  # 5
+  %multmp1 = mul i64 %multmp, 9                             # 6
+  %divtmp = sdiv i64 %multmp1, 4                            # 7
+  ret i64 %divtmp                                           # 8
+}
+```
 
 The Hue compiler generates LLVM [intermediate representation code](http://llvm.org/docs/LangRef.html). Similar to what is output by e.g. Java and .NET compilers when an object file/program is built. LLVM is an amazing piece of compiler infrastructure software that enables a whole slew of features like native machine code generation, code optimization, etc. Going back to the above IR code, we see what actually happened to our program. I've given the lines above numbers, which we are referring to here:
 
@@ -73,34 +79,38 @@ The Hue compiler generates LLVM [intermediate representation code](http://llvm.o
 
 If we generate assembly for x86_64 (basically machine instructions), we get roughly the following:
 
-      .section __TEXT,__text,regular,pure_instructions
-      .globl  _main
-      .align  4, 0x90
-    _main:                          ## 1
-      pushq   %rax
-      movl    $4, %edi              ## 2 (1/4) 
-      movl    $950, %esi            ## 2 (1/4)
-      callq   L_hello$foo           ## 2 (1/4)
-      xorl    %eax, %eax            ## 3 (2/3)
-      popq    %rdx                  ## 3 (3/3)
-      ret                           ## 3 (4/3) ...
-      .align  4, 0x90
-    L_hello$foo:
-      imulq   %rsi, %rdi            
-      leaq    (%rdi,%rdi,8), %rcx
-      movq    %rcx, %rax
-      sarq    $63, %rax
-      shrq    $62, %rax
-      addq    %rcx, %rax
-      sarq    $2, %rax
-      ret
+```armasm
+  .section __TEXT,__text,regular,pure_instructions
+  .globl  _main
+  .align  4, 0x90
+_main:                          ## 1
+  pushq   %rax
+  movl    $4, %edi              ## 2 (1/4) 
+  movl    $950, %esi            ## 2 (1/4)
+  callq   L_hello$foo           ## 2 (1/4)
+  xorl    %eax, %eax            ## 3 (2/3)
+  popq    %rdx                  ## 3 (3/3)
+  ret                           ## 3 (4/3) ...
+  .align  4, 0x90
+L_hello$foo:
+  imulq   %rsi, %rdi            
+  leaq    (%rdi,%rdi,8), %rcx
+  movq    %rcx, %rax
+  sarq    $63, %rax
+  shrq    $62, %rax
+  addq    %rcx, %rax
+  sarq    $2, %rax
+  ret
+```
 
 Yeah, I know. This code gets scarier and scarier, but we can see how closely LLVM IR maps to target assembly, but we also understand the complexity of modeling something simple as the initial Hue program on x86_64 assembler.
 
 We can run our program, which by the way doesn't really do anything, either straight through LLVM as JIT-ed code using `lli hello.ll` or generate an object file and link it as a program:
 
-    llvm-as -o=- hello.ll | llvm-ld -native -o=hello -
-    ./hello
+```txt
+llvm-as -o=- hello.ll | llvm-ld -native -o=hello -
+./hello
+```
 
 Functional programming has for a long time been the toolbox of mathematicians and CS ninjas with beards (Johan and Erik — I'm lookin' at you). My guess is that math people—clever fellas—invented these things and created syntaxes that fell natural to them. I never really payed attention to math in school and have no math education beyond the very basics, like multiplication, yet I have come to realize the awesomeness of math and its concepts. So how about we take the awesomeness of functional programming—high modularity and code re-use, testability, stability, etc—to us programming peasants of Python, JavaScript, BASIC and Java? Perhaps this project will be an attempt on that, or perhaps not.
 
