Enhance post for ChemCOG tool with metadata
Added metadata and improved project description.

--- a/_posts/2025-11-14-14240.md
+++ b/_posts/2025-11-14-14240.md
@@ -1,3 +1,12 @@
+---
+layout: post
+title: "14240"
+description: "ChemCOG"
+tags: chemistry Excel VBA molport pubchem
+---
 
+I wrote a small Excel tool, inspired by the now-defunct [ChemCell](https://depth-first.com/articles/2010/11/01/chemcell-easily-convert-names-and-cas-numbers-to-chemical-structures-in-excel/) which allows lookup of a couple chemical identifiers (SMILES, CAS) as well as allowing the user to pull pricing, vendor, lead time information from the MolPort API.
 
-https://github.com/nickuhlig/chemcog
+You need an API key for MolPort to allow the costing/sourcing functions to work, but if you don't need that you can still use the PubChem PUG REST lookup functions.
+
+Find it here: https://github.com/nickuhlig/chemcog
